--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -9,7 +9,6 @@
     
 </head>
 <body>
-    
          <div class="header">
         <a href="/">   
         <div class="leftsection">
@@ -30,16 +29,32 @@
             <div class="nav">
                 <ul>
                     <li><a href="/about-us">About Us</a></li> |
+                    {% if user.is_authenticated %}
                     <li><a href="/blogs/blogs">Blogs</a></li> |
+                    {% else %}
+                    <li><a href="/auth/login">Blogs</a></li> |
+                    {% endif %}
+                    {% if user.is_authenticated %}
                    <li><a href="/blogs/add-blog">Write</a></li> |
+                   {% else %}
+                   <li><a href="/auth/login">Write</a></li> |
+                   {%endif%}
+                   {% if not user.is_authenticated %}
                     <li><a href="/auth/log-in">Log-In</a></li> |
+                    {% endif %}
+                    {% if user.is_authenticated %}
                     <li><a href="/auth/sign-up" class="getstarted-btn">Get Started</a></li>
+                    {% else %}
+                    <li><a href="/blogs/blogs" class="getstarted-btn">Get Started</a></li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                    <li><a href="/user-profile" class="getstarted-btn"> Profile </a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
-    
      </div>
-     
+    
     <!-- Sidebar Navigation -->
     <div class="sidebar">
         <div class="sidebar-header">
