--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -48,7 +48,7 @@
                     <li><a href="/auth/sign-up" class="getstarted-btn">Get Started</a></li>
                     {% endif %}
                     {% if user.is_authenticated %}
-                    <li><a href="/user-profile" class="getstarted-btn"> Profile </a></li>
+                    <li><a href="/user-profile" class="profile"> Profile </a></li>
                     {% endif %}
                 </ul>
             </div>
